[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pccg"
version = "0.0.2"
authors = [
  { name="Xinqiang Ding", email="dingxq@mit.edu" },
  { name="Bin Zhang", email="binz@mit.edu"}
]
description = "Potential Contrasting Coarse Graining"
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'numpy>=1.20.0',
    'scipy>=1.11.0',
    'torch>=2.0.0',
]

[project.urls]
"Homepage" = "https://github.com/ZhangGroup-MITChemistry/PC.git"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.build]
exclude = [
  "examples/*",
]
