[project]
name = "pccg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Xinqiang Ding", email = "Xinqiang.Ding@tufts.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]>=0.4.37",
]

[project.scripts]
pccg = "pccg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.30.0",
    "matplotlib>=3.10.0",
]
